Try-fix account name on mobile

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -48,10 +48,19 @@
 }
 
 #nav {
-    min-height: 65px;
+    min-height: 60px;
     max-height: 75px;
     height: 10%;
     padding-right:0px;
+    text-align: right;
+}
+
+#account {
+
+    text-overflow: ellipsis;
+    text-align: left;
+
+
 }
 
 @media only screen and (min-width: 768px) 
@@ -61,4 +70,6 @@
         height: 48px;
         margin-left: 10px;
     }
+
+   
 }
